[package]
authors = ["KILT <info@kilt.io>"]
edition = "2018"
name = "kilt-primitives"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true, features = ["derive"]}

frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8"}

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "serde",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std"
]
try-runtime = [
  "frame-support/try-runtime"
]
