[package]
authors = ["KILT <info@kilt.io>"]
edition = "2018"
name = "kilt-primitives"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true, features = ["derive"]}
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11"}

[features]
default = ["std"]
fast-gov = []
std = [
  "codec/std",
  "frame-support/std",
  "scale-info/std",
  "serde",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
