[package]
authors = [ 'KILT <info@kilt.io>' ]
edition = '2018'
name = 'mashnet-node-runtime'
version = '0.22.0'

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.6'

[dependencies.aura]
default-features = false
package = 'pallet-aura'
version = '2.0.0-rc4'

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0-rc4'

[dependencies.bitflags]
default-features = false
version = '1.2.1'

[dependencies.codec]
default-features = false
features = [ 'derive' ]
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.executive]
default-features = false
package = 'frame-executive'
version = '2.0.0-rc4'

[dependencies.grandpa]
default-features = false
package = 'pallet-grandpa'
version = '2.0.0-rc4'

[dependencies.randomness-collective-flip]
default-features = false
package = 'pallet-randomness-collective-flip'
version = '2.0.0-rc4'

[dependencies.runtime-io]
default-features = false
package = 'sp-io'
version = '2.0.0-rc4'

[dependencies.serde]
features = [ 'derive' ]
optional = true
version = '1.0'

[dependencies.sp-api]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-arithmetic]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-block-builder]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-consensus-aura]
default-features = false
version = '0.8.0-rc4'

[dependencies.sp-core]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-inherents]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-offchain]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-session]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-transaction-pool]
default-features = false
version = '2.0.0-rc4'

[dependencies.sp-version]
default-features = false
version = '2.0.0-rc4'

[dependencies.sudo]
default-features = false
package = 'pallet-sudo'
version = '2.0.0-rc4'

[dependencies.support]
default-features = false
package = 'frame-support'
version = '2.0.0-rc4'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-rc4'

[dependencies.timestamp]
default-features = false
package = 'pallet-timestamp'
version = '2.0.0-rc4'

[dependencies.transaction-payment]
default-features = false
package = 'pallet-transaction-payment'
version = '2.0.0-rc4'

[dependencies.indices]
default-features = false
package = 'pallet-indices'
version = '2.0.0-rc4'

[dependencies.system-rpc-runtime-api]
default-features = false
package = "frame-system-rpc-runtime-api"
version = "2.0.0-rc4"


[features]
default = [ 'std' ]
std = [
    'indices/std',
    'grandpa/std',
    'aura/std',
    'balances/std',
    'codec/std',
    'sp-consensus-aura/std',
    'executive/std',
    'sp-core/std',
    'sp-std/std',
    'runtime-io/std',
    'sp-runtime/std',
    'randomness-collective-flip/std',
    'serde',
    'sudo/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'sp-version/std',
    'sp-block-builder/std',
    'transaction-payment/std',
    'sp-transaction-pool/std',
    'sp-offchain/std',
    'sp-session/std',
    'sp-arithmetic/std',
    'sp-api/std',
    'sp-inherents/std',
    'system-rpc-runtime-api/std',
]
