[package]
authors = ['KILT <info@kilt.io>']
edition = '2018'
name = 'mashnet-node-runtime'
version = '0.23.0'

[build-dependencies.substrate-wasm-builder-runner]
version = '1.0.6'

[dependencies]
attestation = { version = '0.23.0', default-features = false, path = '../pallets/attestation' }
ctype = { version = '0.23.0', default-features = false, path = '../pallets/ctype' }
delegation = { version = '0.23.0', default-features = false, path = '../pallets/delegation' }
did = { version = '0.23.0', default-features = false, path = '../pallets/did' }
error = { version = '0.23.0', default-features = false, path = '../pallets/error' }
portablegabi = { version = '0.23.0', default-features = false, path = '../pallets/portablegabi' }

[dependencies.session]
default-features = false
package = "pallet-session"
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-session]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.authorship]
default-features = false
package = "pallet-authorship"
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.aura]
default-features = false
package = 'pallet-aura'
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.bitflags]
default-features = false
version = '1.2.1'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.executive]
default-features = false
package = 'frame-executive'
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.grandpa]
default-features = false
package = 'pallet-grandpa'
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.randomness-collective-flip]
default-features = false
package = 'pallet-randomness-collective-flip'
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-io]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sp-api]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-arithmetic]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-block-builder]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-consensus-aura]
default-features = false
version = '0.8.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-core]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-inherents]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-offchain]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-runtime]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-std]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-transaction-pool]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sp-version]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.sudo]
default-features = false
package = 'pallet-sudo'
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.frame-support]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.frame-system]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.timestamp]
default-features = false
package = 'pallet-timestamp'
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.pallet-transaction-payment]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.pallet-indices]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate'
branch = "master"

[features]
default = ['std']
std = [
	'attestation/std',
	'ctype/std',
	'did/std',
	'error/std',
	'delegation/std',
	'portablegabi/std',
	'pallet-indices/std',
	'grandpa/std',
	'aura/std',
	'balances/std',
	'codec/std',
	'sp-consensus-aura/std',
	'executive/std',
	'sp-core/std',
	'sp-std/std',
	'sp-io/std',
	'sp-runtime/std',
	'randomness-collective-flip/std',
	'serde',
	'sudo/std',
	'frame-support/std',
	'frame-system/std',
	'timestamp/std',
	'sp-version/std',
	'sp-block-builder/std',
	'pallet-transaction-payment/std',
	'sp-transaction-pool/std',
	'sp-offchain/std',
	'sp-arithmetic/std',
	'sp-api/std',
	'sp-inherents/std',
	'sp-session/std',
	'frame-system-rpc-runtime-api/std',
	'pallet-transaction-payment-rpc-runtime-api/std'
]
