[package]
authors.workspace = true
description = "Wasm wrapper for kilt-utils."
documentation.workspace = true
edition.workspace = true
name = "sdk-wasm"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build-dependencies]

[dependencies]
# wasm dependencies
console_error_panic_hook = {version = "0.1.6", optional = true}
wasm-bindgen = "0.2.63"
wee_alloc = {version = "0.4.5", optional = true}

# local dependencies
kilt-utils = {workspace = true, default-features = false}

#parity dependencies
sp-core.workspace = true
sp-core-hashing = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38"}
sp-io = {workspace = true, features = ["disable_oom", "disable_panic_handler"]}

#utils 
hash256-std-hasher = { version = "0.15.2", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
