cargo-features = ["workspace-inheritance"]

[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "kilt-support"
description = "Shared traits and structs used across the KILT pallets"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External dependencies
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
scale-info = {workspace = true, features = ["derive"]}

# Substrate dependencies
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
mock = []
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
